# IA-professor-back

./: .env  README.md  pyproject.toml
ia_professor_back/app/: main.py
ia_professor_back/app/database/: connection.py  models.py
migrations/: env.py
