[tool.poetry]
name = "ia-professor-back"
version = "0.1.0"
description = ""
authors = ["itallominatti <itallominatti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
